--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,16 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Allow env example files
+!.env.example
+!.env.production.example
+!.exampleenv
 
 # vercel
 .vercel
