--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -39,6 +42,7 @@
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0",
     "tanstack": "^1.0.2",
+    "vaul": "^1.1.2",
     "xdummy-js": "^1.0.1"
   },
   "devDependencies": {
